Fix font alignment for home

--- a/themes/hyde/static/css/hyde.css
+++ b/themes/hyde/static/css/hyde.css
@@ -732,7 +732,7 @@ th div,
 }
 
 .home .number {
-  font-size: 1.9em;
+  font-size: 1.75em;
   vertical-align: text-bottom;
   display: inline-block;
   float: left;
